--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
 			<version>0.0.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
