working pub to kafka

--- a/compose.yml
+++ b/compose.yml
@@ -62,7 +62,10 @@ services:
     image: apigw
     container_name: api-gateway
     environment:
+      - SERVER_PORT=8081
       - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - SPRING_CONFIG_LOCATION=file:/app/config/
+      - SPRING_PROFILES_ACTIVE=dev
     depends_on:
       kafka:
         condition: service_healthy
@@ -70,5 +73,7 @@ services:
         condition: service_started
       traefik:
         condition: service_started
+    volumes:
+    - ./config/application.properties:/app/config/application.properties
     ports:
       - "8081:8081"
