--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@
 server.port=8081
 
 # Kafka
-spring.kafka.bootstrap-servers=kafka:9092
+spring.profiles.active=dev
+spring.kafka.bootstrap-servers=localhost:29092
+kafka.topics=LoginRequest,NewAccountRequest,MovieTicketRequest,MovieListRequest
 spring.kafka.consumer.group-id=api-gateway-group
 logging.level.org.apache.kafka.clients.producer.ProducerConfig=warn
 logging.level.org.apache.kafka.clients.producer=warn
