--- a/full-compose.yml
+++ b/full-compose.yml
@@ -66,22 +66,22 @@ services:
   # user-management-service:8086
   # gui-service:8087
 
-  api-gateway:
-    image: apigw
-    container_name: api-gateway
-    environment:
-      - SERVER_PORT=8081
-      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-      - SPRING_CONFIG_LOCATION=file:/app/config/
-      - SPRING_PROFILES_ACTIVE=dev
-    depends_on:
-      kafka:
-        condition: service_healthy
-      kafdrop:
-        condition: service_started
-      traefik:
-        condition: service_started
-    volumes:
-    - ./config/application.properties:/app/config/application.properties
-    ports:
-      - "8081:8081"
+  # api-gateway:
+  #   image: apigw
+  #   container_name: api-gateway
+  #   environment:
+  #     - SERVER_PORT=8081
+  #     - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+  #     - SPRING_CONFIG_LOCATION=file:/app/config/
+  #     - SPRING_PROFILES_ACTIVE=dev
+  #   depends_on:
+  #     kafka:
+  #       condition: service_healthy
+  #     kafdrop:
+  #       condition: service_started
+  #     traefik:
+  #       condition: service_started
+  #   volumes:
+  #   - ./config/application.properties:/app/config/application.properties
+  #   ports:
+  #     - "8081:8081"
